Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99163

QTransform rotate big image will crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.9, 6.2.3, 6.3.0 Alpha
    • 5.15, 6.0, 6.2, 6.3
    • GUI: Painting
    • None
    • Ubuntu 19.04
    • Linux/X11
    • 8678ab9354 (qt/qtbase/dev) 8678ab9354 (qt/tqtc-qtbase/dev) 533bc785d3 (qt/qtbase/6.3) f2fedb70bf (qt/qtbase/6.2) f2fedb70bf (qt/tqtc-qtbase/6.2) 533bc785d3 (qt/tqtc-qtbase/6.3) 0663d15da6 (qt/tqtc-qtbase/5.15)

      open demo.zip and  run demo, when click button named with 'rotate 270' , the app will crash.

       

      the pixmap is so big that i can't upload. the pixmap size  is  42000 *  24000 (more than 70MB)

        1. demo.zip
          6 kB
          kingderzhang
        2. crash.mp4
          1.01 MB
          kingderzhang
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            kingderzhang kingderzhang
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes