Use qint64 to replace int while qt_transform_image_rasterize

When rotating a very large image(for example,the image size is
42000*24000),using QTransform will cause the the variable of the
qt_transform_image_rasterize function exceeds the range of int.
Fix this by Use qint64 to replace int.

Fixes: QTBUG-99163
Done-with: Eirik Aavitsland <eirik.aavitsland@qt.io>
Change-Id: I11e2873fbb1f432953a1a8e07054f9478dd90fbd
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>
(cherry picked from commit 8678ab9354e01b40e414c1413596dfb475752a9a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>